2008-05-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidDeepInheritanceTreeTest.cs: New. Unit tests for 
	AvoidDeepInheritanceTreeRule.

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsTest.cs: Adapt unit tests with new threshold.

2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Tests.Rules.Maintainability.csproj: New. VS.NET project file.
	* Makefile.am: Add project files to dist

2008-04-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* Test.Rules.Maintainability.mdp: New project.

2008-04-27  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLackOfCohesionOfMethodsTest.cs: New.  Unit tests for the rule.
	Thanks Cedric !

2008-04-27  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Build Gendarme.Rules.Maintainability tests.
	* AvoidComplexMethodsTest.cs: New.  Unit tests for the rule.
	Thanks Cedric !