@@ -1,3 +1,8 @@
+2008-05-18  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* PreferStringIsNullOrEmptyTest.cs: New. Unit tests for 
+	PreferStringIsNullOrEmptyRule.
+
 2008-05-10  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* AvoidDeepInheritanceTreeTest.cs: New. Unit tests for 
